--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "silverstripe-module/skeleton",
-    "description": "A skeleton for SilverStripe modules.",
+    "name": "dynamic/silverstripe-shopify",
+    "description": "A Shopify Store module for Silverstripe",
     "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
@@ -8,8 +8,9 @@
     ],
     "license": "BSD-3-Clause",
     "require": {
-        "silverstripe/framework": "^4.0",
-        "silverstripe/admin": "^1.0"
+        "littlegiant/silverstripe-catalogmanager": "^5.2.0",
+        "guzzlehttp/guzzle": "^7.2",
+        "silverstripe/recipe-cms": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
@@ -17,17 +18,14 @@
     },
     "autoload": {
         "psr-4": {
-            "SilverStripeModule\\Skeleton\\": "src/",
-            "SilverStripeModule\\Skeleton\\Tests\\": "tests/"
+            "Dynamic\\Shopify\\": "src/",
+            "Dynamic\\Shopify\\Test\\": "tests/"
         }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.x-dev"
-        },
-        "expose": [
-            "client/dist"
-        ]
+            "dev-master": "1.x-dev"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
