--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,16 @@
     "require": {
         "littlegiant/silverstripe-catalogmanager": "^5.2.0",
         "guzzlehttp/guzzle": "^7.2",
-        "silverstripe/recipe-cms": "^4.2"
+        "silverstripe/recipe-cms": "^4.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "^3.0"
+        "squizlabs/php_codesniffer": "^3.0",
+        "phpmd/phpmd": "^2.6",
+        "sebastian/phpcpd": "^3.0",
+        "phploc/phploc": "^4.0",
+        "pdepend/pdepend": "^2.5",
+        "theseer/phpdox": "^0.11"
     },
     "autoload": {
         "psr-4": {
