--- a/tests/Fixture/shopify-collection.yml
+++ b/tests/Fixture/shopify-collection.yml
@@ -1,3 +1,5 @@
 Dynamic\Shopify\Page\ShopifyCollection:
   one:
     Title: 'Category One'
+    ShopifyID: '0012345'
+    URLSegment: 'collection-one'
