--- a/tests/Fixture/shopify-product.yml
+++ b/tests/Fixture/shopify-product.yml
@@ -7,6 +7,7 @@ Dynamic\Shopify\Page\ShopifyProduct:
     Title: 'Product One'
     Parent: =>Dynamic\Shopify\Page\ShopifyCollection.one
     ShopifyID: '12345'
+    URLSegment: 'product-one'
 
 Dynamic\Shopify\Model\ShopifyVariant:
   one:
@@ -20,3 +21,10 @@ Dynamic\Shopify\Model\ShopifyVariant:
     Price: 29.9
     CompareAtPrice: 31.9
 
+Dynamic\Shopify\Model\ShopifyFile:
+  one:
+    Title: 'File One'
+    Product: =>Dynamic\Shopify\Page\ShopifyProduct.one
+  two:
+    Title: 'File Twp'
+    Product: =>Dynamic\Shopify\Page\ShopifyProduct.one
