--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
     ],
     "license": "BSD-3-Clause",
     "require": {
+        "dynamic/silverstripe-site-tools": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
         "littlegiant/silverstripe-catalogmanager": "^5.2",
-        "silverstripe/recipe-cms": "^4.5"
+        "silverstripe/recipe-cms": "^4.5",
+        "symbiote/silverstripe-gridfieldextensions": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
