--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -20,5 +20,8 @@
 
         <!-- Allow non camel cased method names -->
         <exclude name="PSR1.Methods.CamelCapsMethodName.NotCamelCaps"/>
+
+        <exclude name="PSR1.Files.SideEffects.FoundWithSymbols" />
+
     </rule>
 </ruleset>
