--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,11 +1,12 @@
 ---
 name: silverstripe-shopify-config
 ---
-Dynamic\Shopify\Page\Product:
+Dynamic\Shopify\Page\ShopifyProduct:
   extensions:
     - LittleGiant\CatalogManager\Extensions\CatalogPageExtension
   parent_classes:
-    - Dynamic\Shopify\Page\ProductCollection
+    - Dynamic\Shopify\Page\ShopifyCollection
+  sort_column: false
 
 SilverStripe\Security\Member:
   extensions:
