--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "littlegiant/silverstripe-catalogmanager": "^5.2",
         "silverstripe/recipe-cms": "^4.5",
-        "symbiote/silverstripe-gridfieldextensions": "^3.0"
+        "symbiote/silverstripe-gridfieldextensions": "^3.0",
+        "osiset/basic-shopify-api": "^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
