--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -21,6 +21,8 @@
         <!-- Allow non camel cased method names -->
         <exclude name="PSR1.Methods.CamelCapsMethodName.NotCamelCaps"/>
 
+        <exclude name="Generic.Files.LineLength"/>
+
         <exclude name="PSR1.Files.SideEffects.FoundWithSymbols" />
 
     </rule>
