--- a/_config/config.yml
+++ b/_config/config.yml
@@ -15,3 +15,7 @@ SilverStripe\Security\Member:
 PageController:
   extensions:
     - Dynamic\Shopify\Extension\ShopifyExtension
+
+SilverStripe\Core\Injector\Injector:
+  SilverStripe\Security\MemberAuthenticator\LoginHandler:
+    class: Dynamic\Shopify\Extension\ShopifyLoginHandler
