--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.x-dev"
-        }
+        },
+        "expose": [
+            "client"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true
