Moved some things around made the webhook controller a base class for all other webhook controllers

--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -8,4 +8,5 @@ after:
 SilverStripe\Control\Director:
   rules:
     'multipass': 'Dynamic\Shopify\Controller\ShopifyMultipassController'
-    'webhooks/shopify//$Action': 'Dynamic\Shopify\Controller\WebhookController'
+    'webhooks/shopify/product//$Action': 'Dynamic\Shopify\Controller\Webhook\ProductWebhookController'
+    'webhooks/shopify/collection//$Action': 'Dynamic\Shopify\Controller\Webhook\CollectionWebhookController'
