Re-worked how the webhook controller handled things   - will now try to call a method is a different controller based on header info

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -16,6 +16,11 @@ PageController:
   extensions:
     - Dynamic\Shopify\Extension\ShopifyExtension
 
+Dynamic\Shopify\Controller\Webhook\WebhookController:
+  type_routing:
+    products: Dynamic\Shopify\Controller\Webhook\ProductWebhookController
+    collections: Dynamic\Shopify\Controller\Webhook\CollectionWebhookController
+
 SilverStripe\Core\Injector\Injector:
   SilverStripe\Security\MemberAuthenticator\LoginHandler:
     class: Dynamic\Shopify\Extension\ShopifyLoginHandler
