BUGFIX ShopifyProduct - Catalog manager - disable automatic_live_sort
closes dynavap/dynavap-website-installer#663

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -7,6 +7,7 @@ Dynamic\Shopify\Page\ShopifyProduct:
   parent_classes:
     - Dynamic\Shopify\Page\ShopifyCollection
   sort_column: false
+  automatic_live_sort: false
 
 SilverStripe\Security\Member:
   extensions:
