schema now uses the currency code set in shopify   - stored in site config   - updated automatically when a fetch occurs

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -19,6 +19,10 @@ PageController:
   extensions:
     - Dynamic\Shopify\Extension\ShopifyExtension
 
+SilverStripe\SiteConfig\SiteConfig:
+  extensions:
+    - Dynamic\Shopify\Extension\ShopifySiteConfigExtension
+
 SilverStripe\Core\Injector\Injector:
   SilverStripe\Security\MemberAuthenticator\LoginHandler:
     class: Dynamic\Shopify\Extension\ShopifyLoginHandler
