--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
     },
     "config": {
         "allow-plugins": {
-            "composer/installers": true
+            "composer/installers": true,
+            "silverstripe/vendor-plugin": true,
+            "silverstripe/recipe-plugin": true
         },
         "process-timeout": 600
     },
