--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,37 @@
 {
     "name": "dynamic/silverstripe-shopify",
     "description": "A Shopify Store module for Silverstripe",
+    "license": "BSD-3-Clause",
     "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
         "CMS"
     ],
-    "license": "BSD-3-Clause",
     "require": {
-        "guzzlehttp/guzzle": "^6.3",
+        "bramdeleeuw/silverstripe-schema": "^2.0",
         "littlegiant/silverstripe-catalogmanager": "^5.2",
-        "silverstripe/recipe-cms": "^4.5",
-        "symbiote/silverstripe-gridfieldextensions": "^3.0",
         "osiset/basic-shopify-api": "^10.0",
-        "bramdeleeuw/silverstripe-schema": "^2.0"
+        "silverstripe/recipe-cms": "^4.5",
+        "symbiote/silverstripe-gridfieldextensions": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "^3.0",
-        "phpmd/phpmd": "^2.6"
+        "silverstripe/recipe-testing": "^2"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Dynamic\\Shopify\\": "src/",
             "Dynamic\\Shopify\\Test\\": "tests/"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/vendor-plugin": true,
+            "silverstripe/recipe-plugin": true
+        },
+        "process-timeout": 600
     },
     "extra": {
         "branch-alias": {
@@ -33,7 +40,5 @@
         "expose": [
             "client"
         ]
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
