--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,17 @@
     "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
-        "CMS"
+        "CMS",
+        "Shopify",
+        "Ecommerce",
+        "BuyButton"
+    ],
+    "authors": [
+        {
+            "name": "Dynamic",
+            "email": "dev@dynamicagency.com",
+            "homepage": "https://www.dynamicagency.com"
+        }
     ],
     "require": {
         "bramdeleeuw/silverstripe-schema": "^2.0",
@@ -34,9 +44,6 @@
         "process-timeout": 600
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "1.x-dev"
-        },
         "expose": [
             "client"
         ]
