CI update workflow

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         }
     ],
     "require": {
+        "php": ".=7.4 || >=8.0",
         "bramdeleeuw/silverstripe-schema": "^2.0",
         "littlegiant/silverstripe-catalogmanager": "^5.2",
         "osiset/basic-shopify-api": "^10.0",
